test/compilable/test19548.d
import std.stdio, std.bitmanip;

void main() {
    int i;
    final switch (i) { case 0: {} }
    writef("");
}
